--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="theme-color" content="#0f172a" />
     <meta name="description" content="Sistema de Gerenciamento de Ordens de Serviço" />
     <title>Service Order Manager</title>
+    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
+    <link rel="apple-touch-icon" href="/logo.svg" />
     <link rel="manifest" href="/manifest.json" />
     
     <!-- Tailwind via CDN para simplicidade -->
