--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     />
     <title>Service Order Manager</title>
 
+    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
+    <link rel="apple-touch-icon" href="/logo.svg" />
+
     <link rel="manifest" href="/manifest.json" />
     <link rel="stylesheet" href="/index.css" />
 
